busqueda de idea para continuar arreglo de like coloreado, crear idea mi perfil y centrado de detalles

--- a/src/app/modals/operacionIdea.component.html
+++ b/src/app/modals/operacionIdea.component.html
@@ -7,8 +7,13 @@
         </div>
         <div *ngIf = "tipo === 'light'">
             <div *ngFor = "let o of operaciones">
-                <div class="panel panel-default">
-                    <div class="panel panel-body likes"><a (click) = "goProfile(o.username)">{{o.username}}</a></div>
+                <div class="row">
+                    <div class="col-xs-1"></div>
+                    <div class="col-xs-10">
+                        <div class="panel panel-default">
+                            <div class="panel panel-body likes"><a (click) = "goProfile(o.username)">{{o.username}}</a></div>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div>
@@ -16,20 +21,23 @@
             </div>
         </div>
         <div class="panel panel-info" *ngIf = "tipo === 'comentarios'">
-            <div *ngFor = "let o of operaciones">
-                <div class="panel panel-info">
-                    <div class="panel panel-heading">
-                        <div class="row" >
-                            <div class="col-xs-6">
-                                <a  (click) = "goProfile(o.username)">{{o.username}}</a>
-                            </div>
-                            <div class="col-xs-6">
-                                <label style=" text-align: right;">Publicada: {{o.fecha | date:"dd/MM/yyyy"}}</label>
+            <div *ngFor = "let o of operaciones"><div class="row">
+                <div class="col-xs-1"></div>
+                <div class="col-xs-10">
+                    <div class="panel panel-info">
+                        <div class="panel panel-heading">
+                            <div class="row" >
+                                <div class="col-xs-6">
+                                    <a  (click) = "goProfile(o.username)">{{o.username}}</a>
+                                </div>
+                                <div class="col-xs-6">
+                                    <label style=" text-align: right;">Publicada: {{o.fecha | date:"dd/MM/yyyy"}}</label>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="panel panel-body titulo">
-                        {{o.contenido}}
+                        <div class="panel panel-body titulo">
+                            {{o.contenido}}
+                        </div>
                     </div>
                 </div>
             </div>
