--- a/src/app/user/myprofile.component.html
+++ b/src/app/user/myprofile.component.html
@@ -77,53 +77,61 @@
         </div>
     </div>
     <div class="col-xs-7">
-        <div class="panel panel-default">
-            <div class="panel-heading">
-                <form>
-                    <div class="form-group">
-                        <label for="sel1">Seleccione el tipo de idea:</label>
-                        <select class="form-control" id="sel1" [(ngModel)]="selectedValueTipo" name="tipoIdea" [ngModelOptions]="{standalone: true}">
+        <div class="panel panel-default"> 
+        <div class="panel-heading">
+            <form>
+                <div class="form-group">
+                    <label for="sel1">Seleccione el tipo de idea:</label>
+                    <select class="form-control" id="sel1" [(ngModel)]="selectedValueTipo" name="tipoIdea" [ngModelOptions]="{standalone: true}">
                         <option value="NU">Nueva</option>
                         <option value="PC">Para continuar</option>
                         <option value="PE">Para empezar</option>
                         <option value="PR">Proyecto</option>
                     </select>
-                    </div>
-                    <div class="form-group">
-                        <h4>Contenido</h4>
-                        <textarea class="form-control" rows="5" [(ngModel)]="contenido" name="content"></textarea>
-                    </div>
+                </div>
+                <div class="form-group">
+                    <h4>Contenido</h4>
+                    <textarea class="form-control" rows="5" [(ngModel)]="contenido" name="content"></textarea>
+                </div>
 
-                    <div class="form-group" *ngIf="selectedValueTipo == 'PC' || selectedValueTipo == 'PE'">
-                        <label for="numeroest">Numero de estudiantes: </label>
-                        <input class="form-control" type="number" [(ngModel)]="numeroEstudiantes" name="numero">
-                    </div>
+                <div class="form-group" *ngIf="selectedValueTipo == 'PC' || selectedValueTipo == 'PE'">
+                    <label for="numeroest">Numero de estudiantes: </label>
+                    <input class="form-control" type="number" [(ngModel)]="numeroEstudiantes" name="numero">
+                </div>
 
-                    <div class="form-group" *ngIf="selectedValueTipo == 'PE'">
-                        <label for="alcance">Alcance: </label>
-                        <input class="form-control" type="text" [(ngModel)]="alcance" name="alc">
-                        <label for="problematica">Problematica: </label>
-                        <textarea class="form-control" type="text" [(ngModel)]="problematica" rows='5' name="problem"></textarea>
-                    </div>
-                    <div class="form-group" *ngIf="selectedValueTipo == 'PR'">
-                        <button type="button" class="btn" (click)="agregarIdeas()">Agregar ideas</button>
-                    </div>
+                <div class="form-group" *ngIf="selectedValueTipo == 'PE'">
+                    <label for="alcance">Alcance: </label>
+                    <input class="form-control" type="text" [(ngModel)]="alcance" name="alc">
+                    <label for="problematica">Problematica: </label>
+                    <textarea class="form-control" type="text" [(ngModel)]="problematica" rows = '5' name="problem"></textarea>
+                </div>
+                <div class="form-group" *ngIf="selectedValueTipo == 'PR'">
+                    <button type="button" class="btn" (click) = "agregarIdeas()">Agregar ideas</button>
+                </div>
 
-                    <div class="form-group" *ngIf="selectedValueTipo == 'PC'">
-                        <button type="button" class="btn" (click)="asociarTG()">Asociar tg</button>
-                    </div>
+                <div class="form-group" *ngIf="selectedValueTipo == 'PC'">
+                    <button type="button" class="btn" (click) = "asociarTG()">Asociar tg</button>
+                </div>
 
-                    <p-autoComplete [(ngModel)]="selectedTags" [suggestions]="filteredTagsMultiple" (completeMethod)="filterTagMultiple($event)"
-                        [minLength]="1" placeholder="Tags" field="nombre" [multiple]="true" [ngModelOptions]="{standalone: true}">
-                    </p-autoComplete>
-                    <div class="alert alert-danger" *ngIf="valid === false">
-                        <label> Por Favor completar el formulario.</label>
+                <p-autoComplete [(ngModel)]="selectedTags" [suggestions]="filteredTagsMultiple" (completeMethod)="filterTagMultiple($event)"
+                    [minLength]="1" placeholder="Tags" field="nombre" [multiple]="true" [ngModelOptions]="{standalone: true}">
+                </p-autoComplete>
+                <div class="alert alert-danger" *ngIf = "valid === false">
+                    <label> Por Favor completar el formulario.</label>
+                </div>
+                <br>
+                <div class="row">
+                    <div class="col-xs-5">
+                        <button type="button" (click)="crearIdea()" class="btn btn-primary">Publicar</button>
                     </div>
-                    <br>
-                    <button type="button" (click)="crearIdea()" class="btn btn-primary">Publicar</button>
-                </form>
-            </div>
+                    <div class="col-xs-7">
+                        <label *ngIf="selectedValueTipo == 'PR'">Número de ideas: {{ideasPro.length}}</label>
+                        <label *ngIf="selectedValueTipo == 'PC'">Trabajo de grado asociado: {{tg.nombre}}</label>
+                    </div>
+                </div>
+            </form>
         </div>
+    </div> 
         <div class="panel panel-default center" *ngFor="let idea of ideas; index as indice">
             <idea [idea]="idea" (change)="cambio($event)"></idea>
         </div>
