corrección listado de perfiles

--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -67,7 +67,7 @@
                             <img class="icon_user" src="images/icons/graduate.png" />
                         </div>
                         <div class="media-body">
-                            <h4 class="media-heading">Profesor</h4>
+                            <h4 class="media-heading">Egresado</h4>
                             <p>Representa a un usuario que es egresado dentro del sistema</p>
                         </div>
                     </div>
