--- a/src/app/modals/operacionIdea.component.html
+++ b/src/app/modals/operacionIdea.component.html
@@ -19,7 +19,10 @@
                         </div>
                     </div>
                     <div>
-                        <button class="btn btn-primary" (click)="aceptar()">Aceptar</button>
+                        <div class="row">
+                            <div class="col-xs-1"></div>
+                            <button class="btn btn-primary" (click)="aceptar()">Aceptar</button>
+                        </div>
                     </div>
                 </div>
                 <div *ngIf="tipo === 'comentarios'">
@@ -46,7 +49,10 @@
                         </div>
                     </div>
                     <div>
-                        <button class="btn btn-primary" (click)="aceptar()">Aceptar</button>
+                        <div class="row">
+                            <div class="col-xs-1"></div>
+                            <button class="btn btn-primary" (click)="aceptar()">Aceptar</button>
+                        </div>
                     </div>
                 </div>
             </div>
