--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -258,7 +258,7 @@
                         <div class="panel-heading">
                             <div class="media">
                                 <div class="media-left">
-                                    <img src="images/motor.png" class="media-object" style="width:60px">
+                                    <img src="images/insignias/{{a.iconoRef}}" class="media-object" style="width:60px">
                                 </div>
                                 <div class="media-body">
                                     <h4 class="media-heading">{{a.nombre}}</h4>
