--- a/src/app/admin/admin-crud.component.html
+++ b/src/app/admin/admin-crud.component.html
@@ -12,61 +12,60 @@
             </ul>
         </div>
     </nav>
-</div>
-<div *ngIf="activeTab == 'carreras'" class="row">
-    <div class="col-xs-2"></div>
-    <div class="col-xs-8">
-        <p-dataTable [value]="carreras" selectionMode="single" [(selection)]="selectedcarrera" (onRowSelect)="onRowSelect($event)"
-            [paginator]="true" [rows]="10" emptyMessage="No hay carreras">
-            <p-header>CRUD Carreras</p-header>
-            <p-column field="nombre" header="Nombre" [sortable]="true"></p-column>
-            <p-column field="facultad" header="Facultad" [sortable]="true"></p-column>
-            <!-- <p-column field="carrerasAfines" header="Carreras Afines" [sortable]="true"></p-column>-->
-            <p-footer>
-                <button type="submit" class="btn btn-primary btn-block" (click)="createCarrera()">Agregar</button>
-            </p-footer>
-        </p-dataTable>
+    <div *ngIf="activeTab == 'carreras'" class="row">
+        <div class="col-xs-2"></div>
+        <div class="col-xs-8">
+            <p-dataTable [value]="carreras" selectionMode="single" [(selection)]="selectedcarrera" (onRowSelect)="onRowSelect($event)"
+                [paginator]="true" [rows]="10" emptyMessage="No hay carreras">
+                <p-header>CRUD Carreras</p-header>
+                <p-column field="nombre" header="Nombre" [sortable]="true"></p-column>
+                <p-column field="facultad" header="Facultad" [sortable]="true"></p-column>
+                <p-footer>
+                    <button type="submit" class="btn btn-primary btn-block" (click)="createCarrera()">Agregar</button>
+                </p-footer>
+            </p-dataTable>
+        </div>
+    </div>
+    <div *ngIf="activeTab == 'etiquetas'" class="row">
+        <div class="col-xs-2"></div>
+        <div class="col-xs-8">
+            <p-dataTable [value]="tags" selectionMode="single" [(selection)]="selectedTag" (onRowSelect)="onRowSelectTag($event)" [paginator]="true"
+                [rows]="10" emptyMessage="No hay tags">
+                <p-header>CRUD Tags</p-header>
+                <p-column field="nombre" header="Nombre" [sortable]="true"></p-column>
+                <p-footer>
+                    <button type="submit" class="btn btn-primary btn-block" (click)="createTag()">Agregar</button>
+                </p-footer>
+            </p-dataTable>
+        </div>
+    </div>
+    <div *ngIf="activeTab == 'habilidades'" class="row">
+        <div class="col-xs-2"></div>
+        <div class="col-xs-8">
+            <p-dataTable [value]="habilidades" selectionMode="single" [(selection)]="selectedHabilidad" (onRowSelect)="onRowSelectHabilidad($event)"
+                [paginator]="true" [rows]="10" emptyMessage="No hay habilidades">
+                <p-header>CRUD Habilidades</p-header>
+                <p-column field="nombre" header="Nombre" [sortable]="true"></p-column>
+                <p-column field="tipo" header="Tipo" [sortable]="true" value="defecto"></p-column>
+                <p-column field="carrera" header="Carrera" [sortable]="true"></p-column>
+                <p-footer>
+                    <button type="submit" class="btn btn-primary btn-block" (click)="createHabilidad()">Agregar</button>
+                </p-footer>
+            </p-dataTable>
+        </div>
+    </div>
+    <div *ngIf="activeTab == 'enfasis'" class="row">
+        <div class="col-xs-2"></div>
+        <div class="col-xs-8">
+            <p-dataTable [value]="enfasisList" selectionMode="single" [(selection)]="selectedEnfasis" (onRowSelect)="onRowSelectEnfasis($event)"
+                [paginator]="true" [rows]="10" emptyMessage="No hay énfasis">
+                <p-header>CRUD ÉNFASIS</p-header>
+                <p-column field="nombre" header="Nombre" [sortable]="true"></p-column>
+                <p-column field="carrera" header="Carrera" [sortable]="true"></p-column>
+                <p-footer>
+                    <button type="submit" class="btn btn-primary btn-block" (click)="createEnfasis()">Agregar</button>
+                </p-footer>
+            </p-dataTable>
+        </div>
     </div>
 </div>
-<div *ngIf="activeTab == 'etiquetas'" class="row">
-    <div class="col-xs-2"></div>
-    <div class="col-xs-8">
-        <p-dataTable [value]="tags" selectionMode="single" [(selection)]="selectedTag" (onRowSelect)="onRowSelectTag($event)" [paginator]="true"
-            [rows]="10" emptyMessage="No hay tags">
-            <p-header>CRUD Tags</p-header>
-            <p-column field="nombre" header="Nombre" [sortable]="true"></p-column>
-            <p-footer>
-                <button type="submit" class="btn btn-primary btn-block" (click)="createTag()">Agregar</button>
-            </p-footer>
-        </p-dataTable>
-    </div>
-</div>
-<div *ngIf="activeTab == 'habilidades'" class="row">
-    <div class="col-xs-2"></div>
-    <div class="col-xs-8">
-        <p-dataTable [value]="habilidades" selectionMode="single" [(selection)]="selectedHabilidad" (onRowSelect)="onRowSelectHabilidad($event)"
-            [paginator]="true" [rows]="10" emptyMessage="No hay habilidades">
-            <p-header>CRUD Habilidades</p-header>
-            <p-column field="nombre" header="Nombre" [sortable]="true"></p-column>
-            <p-column field="tipo" header="Tipo" [sortable]="true" value ="defecto"></p-column>
-            <p-column field="carrera" header="Carrera" [sortable]="true"></p-column>
-            <p-footer>
-                <button type="submit" class="btn btn-primary btn-block" (click)="createHabilidad()">Agregar</button>
-            </p-footer>
-        </p-dataTable>
-    </div>
-</div>
-<div *ngIf="activeTab == 'enfasis'" class="row">
-    <div class="col-xs-2"></div>
-    <div class="col-xs-8">
-        <p-dataTable [value]="enfasisList" selectionMode="single" [(selection)]="selectedEnfasis" (onRowSelect)="onRowSelectEnfasis($event)" [paginator]="true"
-            [rows]="10" emptyMessage="No hay énfasis">
-            <p-header>CRUD ÉNFASIS</p-header>
-            <p-column field="nombre" header="Nombre" [sortable]="true"></p-column>
-            <p-column field="carrera" header="Carrera" [sortable]="true"></p-column>
-            <p-footer>
-                <button type="submit" class="btn btn-primary btn-block"   (click)="createEnfasis()">Agregar</button>
-            </p-footer>
-        </p-dataTable>
-    </div>
-</div>   
