--- a/src/app/idea/idea.component.html
+++ b/src/app/idea/idea.component.html
@@ -28,9 +28,9 @@
         <div class="col-xs-4"><button type="button" (click)="comentar()" class="btn btn-default btn-block"><i class="glyphicon glyphicon-comment" >
                 </i> Comentar</button>
         </div>
-        <div class="col-xs-4"><button type="button" [disabled]="username.toLowerCase() == idea.usuario.toLowerCase()" class="btn btn-default btn-block"
-                (click)="compartir()">
-                <i class="glyphicon glyphicon-share"></i> Share</button>
+        <div class="col-xs-4"><button type="button" [disabled]="username.toLowerCase() == idea.usuario.toLowerCase() || idea.tipo == 'PR'" 
+                class="btn btn-default btn-block" (click)="compartir()">
+                <i class="glyphicon glyphicon-share"></i> Compartir</button>
         </div>
     </div>
 </div>
