--- a/src/app/newsfeed/home.component.html
+++ b/src/app/newsfeed/home.component.html
@@ -1,4 +1,5 @@
 <div class="container">
+    <p-growl [(value)]="msgs"></p-growl>
     <div class="row">
         <div class="col-xs-6">
             <div class="container">
