--- a/src/app/modals/compartir-idea.component.css
+++ b/src/app/modals/compartir-idea.component.css
@@ -11,6 +11,9 @@
   overflow-y: auto;
 }
 .msg_share{
-    margin-left:150px;
-    margin-top:35px;
+  left: 0px ;
+  position: absolute ;
+  right: 0px ;
+  text-align: center ;
+  top: 17% ;
 }
