pequeños ajustes de pantalla

--- a/src/app/admin/admin-rules.component.html
+++ b/src/app/admin/admin-rules.component.html
@@ -13,7 +13,7 @@
                 <h3>Panel</h3>
                 <h4>Links de interés</h4>
                 <li>Documentación Drools versión 6.5.0 Final: <a target="_blank" href="https://docs.jboss.org/drools/release/6.5.0.Final/drools-docs/html_single/">link</a></li>
-                <li>Motor de reglas de Know&Share: <a target="_blank" href="http://52.14.144.253:8080/drools-wb">link</a></li>
+                <li>Motor de reglas de Know&Share: <a target="_blank" href="http://drools.knowshare.me:8080/drools-wb">link</a></li>
                 <hr><h4>Administración</h4>
                 <div class="row">
                     <div class="col-xs-6 center">
