ajustes en pantalla de usuarios

--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -102,9 +102,9 @@
         </div>
 
         <div class="row">
-            <div *ngIf="!usuario.segundaCarrera" class="col-xs-2">
-            </div>
-            <div [ngClass]="usuario.segundaCarrera ? 'col-xs-6':'col-xs-8'">
+            <!-- <div *ngIf="!usuario.segundaCarrera" class="col-xs-2">
+            </div> -->
+            <div [ngClass]="usuario.segundaCarrera ? 'col-xs-6':'col-xs-12'">
                 <div class="panel panel-default">
                     <div class="panel-heading">
                         <h2>{{usuario.carrera.nombre}}</h2>
